@@ -1,13 +1,13 @@
 #define RUBY_VERSION "1.9.2"
-#define RUBY_PATCHLEVEL 274
+#define RUBY_PATCHLEVEL 275
 #define RUBY_VERSION_MAJOR 1
 #define RUBY_VERSION_MINOR 9
 #define RUBY_VERSION_TEENY 1
 
 #define RUBY_RELEASE_YEAR 2011
-#define RUBY_RELEASE_MONTH 6
-#define RUBY_RELEASE_DAY 6
-#define RUBY_RELEASE_DATE "2011-06-06"
+#define RUBY_RELEASE_MONTH 7
+#define RUBY_RELEASE_DAY 3
+#define RUBY_RELEASE_DATE "2011-07-03"
 
 #include "ruby/version.h"
 
